--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Portfolio under construction</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color: darkgrey;
+  font-family: garamond;
+  font-size: 300%;
+}
+</style>
+</head>
+  
+<body>
+
+<h1>Portfolio Under Construction</h1>
+
+</body>
+</html>
