--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 			</div>
 			<div>
 				<i class="fa fa-linkedin"></i>
-				<a href="https://www.linkedin.com/in/brant-collins">www.linkedin.com/in/brant-collins</a>
+				<a href="https://www.linkedin.com/in/lbrantcollins">www.linkedin.com/in/lbrantcollins</a>
 			</div>
 			<div style="float: right;">
 				<!-- <div>
@@ -274,8 +274,8 @@
 	These only remain for historical design compatibility. They might go away one day.
 		
 -->
-<div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
-<div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
+<!-- <div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
+<div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div> -->
 
 </body>
 </html>
