--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			
 			<div>
 				<i class="fa fa-envelope"></i>
-				<a href="mailto:brantcollins@gmail.com">brantcollins@gmail.com</a>
+				<a href="mailto:lbrantcollins@gmail.com">lbrantcollins@gmail.com</a>
 			</div>
 			<div>
 				<i class="fa fa-linkedin"></i>
