--- a/index.html
+++ b/index.html
@@ -69,10 +69,17 @@
 					<ul>
 
 						<li>
+							<a href="https://pet-list.herokuapp.com" target="_blank">Pet List</a> 
+							[<a href="https://github.com/lbrantcollins/pet-list" target="_blank" class="code-link">code</a>]
+							<br/>					
+							Javascript, React, Node.js with express, semantic-ui
+						</li>
+
+						<li>
 							<a href="#">Photo Gallery (not yet deployed)</a> 
 							[<a href="https://github.com/lbrantcollins/photo-share" target="_blank" class="code-link">code</a>]
 							<br/>					
-							Javascript, node.js express, sessions, mongoose, mongoDB, Bootstrap
+							Javascript, Node.js with express, sessions, mongoDB, Bootstrap
 						</li>
 
 						<li>
@@ -80,7 +87,7 @@
 							<!-- https://bittools.herokuapp.com/tools -->
 							[<a href="https://github.com/lbrantcollins/tools-project" target="_blank" target="_blank" class="code-link">code</a>]
 							<br/>					
-							Javascript, node.js, express, sessions, mongoose, mongoDB, flexbox
+							Javascript, Node.js with express, sessions, mongoDB, flexbox
 						</li>	
 						
 						<li>
@@ -89,16 +96,16 @@
 							[<a href="https://github.com/lbrantcollins/free_quency-react" target="_blank" class="code-link">client-side code</a>]
 							[<a href="https://github.com/lbrantcollins/free_quency-api" target="_blank" class="code-link">back-end code</a>]
 							<br/>					
-							Javascript, React, Python, Flask, SQL, semantic-ui
+							Javascript, React, Python with Flask, SQL, semantic-ui
 						</li>
 
 						<li>
-							<a href="#">Under Construction</a> 
+							<a href="https://discuss-board-react.herokuapp.com/">Classroom Discussion Board</a> 
 							<br/>
-							[<a href="#" class="code-link">client-side code</a>]
-							[<a href="#" class="code-link">back-end code</a>]
+							[<a href="https://github.com/lbrantcollins/discuss-board-react" class="code-link">client-side code</a>]
+							[<a href="https://github.com/lbrantcollins/discuss-board-react-ruby-sinatra" class="code-link">back-end code</a>]
 							<br/>					
-							Javascript, React, Ruby, Sinatra, SQL, Bootstrap
+							Javascript, React, Ruby with Sinatra, SQL, semantic-ui
 						</li>
 
 					</ul>
@@ -138,12 +145,7 @@
 							Javascript, React, web API
 						</li>
 
-						<li>
-							<a href="https://pet-list.herokuapp.com" target="_blank">Pet List</a> 
-							[<a href="https://github.com/lbrantcollins/pet-list" target="_blank" class="code-link">code</a>]
-							<br/>					
-							Javascript, React, node.js, semantic-ui
-						</li>
+						
 
 						<br/>
 
