re-established link to discussion board project

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						</li>
 
 						<li>
-							<a href="#">Classroom Discussion Board (not yet deployed)</a> 
+							<a href="https://discuss-board-react.herokuapp.com/">Classroom Discussion Board</a> 
 							<br/>
 							[<a href="https://github.com/lbrantcollins/discuss-board-react" class="code-link">client-side code</a>]
 							[<a href="https://github.com/lbrantcollins/discuss-board-react-ruby-sinatra" class="code-link">back-end code</a>]
