deployed video sharing app

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						</li>	
 						
 						<li>
-							<a href="#">Video Sharing (not yet deployed)</a> 
+							<a href="https://freequency.herokuapp.com/">YouTube Video Sharing</a> 
 							<br/>
 							[<a href="https://github.com/lbrantcollins/free_quency-react" target="_blank" class="code-link">client-side code</a>]
 							[<a href="https://github.com/lbrantcollins/free_quency-api" target="_blank" class="code-link">back-end code</a>]
