--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<ul>
 
 						<li>
-							<a href="https://discuss-board-react.herokuapp.com/">Classroom Discussion Board</a> 
+							<a href="https://discuss-board-react.herokuapp.com/" target="_blank">Classroom Discussion Board</a> 
 							<br/>
 							[<a href="https://github.com/lbrantcollins/discuss-board-react" class="code-link">client-side code</a>]
 							[<a href="https://github.com/lbrantcollins/discuss-board-react-ruby-sinatra" class="code-link">back-end code</a>]
@@ -78,7 +78,7 @@
 						</li>
 
 						<li>
-							<a href="https://freequency.herokuapp.com/">YouTube Video Sharing</a> 
+							<a href="https://freequency.herokuapp.com/" target="_blank">YouTube Video Sharing</a> 
 							<br/>
 							[<a href="https://github.com/lbrantcollins/free_quency-react" target="_blank" class="code-link">client-side code</a>]
 							[<a href="https://github.com/lbrantcollins/free_quency-api" target="_blank" class="code-link">back-end code</a>]
@@ -87,7 +87,7 @@
 						</li>
 
 						<li>
-							<a href="#">Photo Gallery (not yet deployed)</a> 
+							<a href="https://sharing-photos.herokuapp.com/" target="_blank">Photo Gallery</a> 
 							[<a href="https://github.com/lbrantcollins/photo-share" target="_blank" class="code-link">code</a>]
 							<br/>					
 							Javascript, Node.js with express, sessions, mongoDB, Bootstrap
@@ -101,12 +101,12 @@
 							Javascript, Node.js with express, sessions, mongoDB, flexbox
 						</li>	 -->
 
-						<li>
+						<!-- <li>
 							<a href="https://pet-list.herokuapp.com" target="_blank">Pet List</a> 
 							[<a href="https://github.com/lbrantcollins/pet-list" target="_blank" class="code-link">code</a>]
 							<br/>					
 							Javascript, React, Node.js with express, semantic-ui
-						</li>
+						</li> -->
 
 						
 
@@ -140,7 +140,7 @@
 						</li> -->
 
 						<li>
-							<a href="https://mastermind-javascript-app.herokuapp.com/">Mastermind Board Bame</a> 
+							<a href="https://mastermind-javascript-app.herokuapp.com/ target="_blank"">Mastermind Board Bame</a> 
 							[<a href="https://github.com/lbrantcollins/MasterMind" target="_blank" class="code-link">code</a>]
 							<br/>					
 							Javascript, CSS flexbox, JQuery
@@ -158,8 +158,12 @@
 						<br/>
 
 					</ul>
-							Note: All code is viewable.<br/>
-							... even for projects not yet deployed.
+							<!-- Note: All code is viewable.<br/>
+							... even for projects not yet deployed. -->
+					&nbsp;
+					&nbsp;
+					&nbsp;
+					&nbsp;
 
 				</nav>
 			</div>
