corrected some links to open a new tab

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 						<li>
 							<a href="https://discuss-board-react.herokuapp.com/" target="_blank">Classroom Discussion Board</a> 
 							<br/>
-							[<a href="https://github.com/lbrantcollins/discuss-board-react" class="code-link">client-side code</a>]
-							[<a href="https://github.com/lbrantcollins/discuss-board-react-ruby-sinatra" class="code-link">back-end code</a>]
+							[<a href="https://github.com/lbrantcollins/discuss-board-react" class="code-link" target="_blank">client-side code</a>]
+							[<a href="https://github.com/lbrantcollins/discuss-board-react-ruby-sinatra" class="code-link" target="_blank">back-end code</a>]
 							<br/>					
 							Javascript, React, Ruby with Sinatra, SQL, semantic-ui
 						</li>
@@ -140,7 +140,7 @@
 						</li> -->
 
 						<li>
-							<a href="https://mastermind-javascript-app.herokuapp.com/ target="_blank"">Mastermind Board Bame</a> 
+							<a href="https://mastermind-javascript-app.herokuapp.com/" target="_blank">Mastermind Board Bame</a> 
 							[<a href="https://github.com/lbrantcollins/MasterMind" target="_blank" class="code-link">code</a>]
 							<br/>					
 							Javascript, CSS flexbox, JQuery
